--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -3,7 +3,7 @@
         <meta charset='UTF-8' />
         <meta name='viewport' content='width=device-width, initial-scale=1.0' />
         <link rel='icon' type='image/png' href='/assets/generated/health-app-icon.dim_256x256.png' />
-        <title>HealthyEats - Personalized Food Recommendations</title>
+        <title>Barrera Healthy Eats</title>
         <meta name='description' content='Get personalized food recommendations based on your health conditions and blood pressure.' />
     </head>
     <body>
